objects/Commission_Amortisation__c.object
<CustomObject>
    <fields>
        <fullName>Amortisation_Amount__c</fullName>
        <label>Amortisation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Commission Amortisation</relationshipLabel>
        <relationshipName>Commission_Amortisation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Closing_Balance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commissions_Paid_On_New_Loan__c</fullName>
        <label>Commissions Paid On New Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Amount_ve__c</fullName>
        <formula>-1* Expense_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Balance__c</fullName>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <label>Commission Amortisation</label>
    <nameField>
        <displayFormat>CMA-{000000000}</displayFormat>
        <label>Commission Amortisation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Amortisation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>